--- a/src/index.css
+++ b/src/index.css
@@ -4,9 +4,12 @@
 /* h2 - roboto mono 500 35px line height 46px #535353 */
 /* h3 - roboto mono 300 35px line height 46px #263238 */
 /* body - work sans 400 15px line height 25px #666666 */
-
+* {
+  box-sizing: border-box;
+}
 body {
   margin: 0;
   padding: 0;
   font-family: sans-serif;
+  color: #263238;
 }
