--- a/src/components/detailsTable.css
+++ b/src/components/detailsTable.css
@@ -1,9 +1,13 @@
 /* details table styles will go here. */
 .display-table {
-  /* styles */
+  margin: 10px 0;
+  border-collapse: collapse;
+  border: 1px solid #939598;
 }
-.display-table span {
-  display: inline-block;
-  /* min-width: 60px; */
+thead {
+  background: #939598;
+  color: white;
+}
+td {
   padding: 5px;
 }
