--- a/src/index.css
+++ b/src/index.css
@@ -8,8 +8,12 @@
   box-sizing: border-box;
 }
 body {
-  margin: 0;
-  padding: 0;
+  position: absolute;
+  min-height: 100vh;
+  width: 100vw;
   font-family: sans-serif;
   color: #263238;
+  margin: 0;
+  padding: 0 0 120px 0;
+  overflow-x: hidden;
 }
