--- a/src/components/detailsTable.css
+++ b/src/components/detailsTable.css
@@ -1,5 +1,6 @@
 /* details table styles will go here. */
 .display-table {
+  width: 100%;
   margin: 10px 0;
   border-collapse: collapse;
   border: 1px solid #939598;
