Added media queries to details page. Hide columns as necessary. Display explanation message

--- a/src/components/detailsTableRow.css
+++ b/src/components/detailsTableRow.css
@@ -1,4 +1,4 @@
-/* details table styles will go here. */
+/* details table row styles will go here. */
 .display-table-row {
   background: #CEDADF;
 }
