--- a/src/components/detailsTable.css
+++ b/src/components/detailsTable.css
@@ -1,10 +1,4 @@
-/* details table styles will go here. */
-.display-table {
-  width: 100%;
-  margin: 10px 0;
-  border-collapse: collapse;
-  border: 1px solid #939598;
-}
+/* details table styles go here. */
 thead {
   background: #939598;
   color: white;
@@ -14,4 +8,42 @@ td {
 }
 td i {
   margin-left: 5px;
+}
+.responsive-message {
+  color: #9eabb7;
+  margin-top: 10px;
+  display: none;
+}
+.display-table {
+  width: 100%;
+  margin: 10px 0;
+  border-collapse: collapse;
+  border: 1px solid #939598;
+}
+@media (max-width: 1050px) {
+  .searchImpressionShare,
+  .maxImpressions {
+    display: none;
+  }
+  .responsive-message {
+    display: block;
+  }
+
+}
+@media (max-width: 840px) {
+  .avgPosition,
+  .avgCpc {
+    display: none;
+  }
+}
+@media (max-width: 540px) {
+  .ctr,
+  .cost {
+    display: none;
+  }
+}
+@media (max-width: 410px) {
+  .conversions {
+    display: none;
+  }
 }
