--- a/src/components/chartImpressions.css
+++ b/src/components/chartImpressions.css
@@ -1,1 +1,8 @@
 /* chartImpressions styles will go here. */
+/* For now, each chart is a unique color. When we eventually add interactive graphs */
+/* we'll have an opportunity to add colors there.  Then it will make more sense to */
+/* make all total/avg chartValue colors the same, probably #69ACD4 */
+.chartImpressions .chartValue,
+.chartImpressions .chartValue {
+  color: #69ACD4;
+}
