--- a/src/components/chartCost.css
+++ b/src/components/chartCost.css
@@ -1,1 +1,26 @@
 /* chartCost styles will go here. */
+/* For now, each chart is a unique color. When we eventually add interactive graphs */
+/* we'll have an opportunity to add colors there.  Then it will make more sense to */
+/* make all total/avg chartValue colors the same, **BUT** We should leave chartCost */
+/* a unique color. */
+.chartCost {
+  margin-top: 10px;
+}
+.chartCost h3,
+.chartCost h5 {
+  margin: 10px 0;
+}
+.chartCost h3 span,
+.chartCost h5 span {
+  color: #F1742F;
+}
+@media (max-width: 660px) {
+  .chartCost h3 {
+    font-size: 1.25em;
+    margin-bottom: 5px;
+  }
+  .chartCost h5 {
+    font-size: 1em;
+    margin-top: 0;
+  }
+}
