Added new comments.  Removed old ones that were no longer helpful.

--- a/src/components/footer.css
+++ b/src/components/footer.css
@@ -4,6 +4,7 @@
   height: 40px;
   background: #43474D;
   color: #9EABB7;
+  text-align: right;
   position: absolute;
   bottom: 0;
   padding: 10px;
